using System;
using System.Collections.Generic;
using System.Text;

namespace DungeonCrawler.Items
{
    internal class Armor
    {
    }
}
