using System;
using System.Collections.Generic;
using System.Text;

namespace DungeonCrawler.World
{
    internal class Room
    {
    }
}
